removed dummy datas
